third_party/blink/web_tests/external/wpt/page-visibility/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Partial interface Document: original interface defined
PASS Document interface: attribute hidden
PASS Document interface: attribute visibilityState
PASS Document interface: attribute onvisibilitychange
Harness: the test ran to completion.

